# pokeplatinum

./: Dockerfile  gen_compile_commands.py  meson.build
asm/macros/: scrcmd.inc
include/: unk_02094EDC.h
platinum.us/: main.lsf  meson.build
res/: meson.build
res/items/: meson.build
res/pokemon/: meson.build
res/trainers/: meson.build
src/: item.c  meson.build  trainer_data.c  unk_0206F314.c  unk_02094EDC.c
src/battle/: battle_display.c  healthbar.c
src/battle_sub_menus/: battle_party.c
src/overlay005/: encounter_effect_core.c
src/overlay007/: ov7_0224CD28.c  shop_menu.c
src/overlay012/: ov12_0222F700.c
src/overlay017/: ov17_0223F118.c
src/overlay021/: ov21_021D0D80.c  ov21_021D5AEC.c  ov21_021D76B0.c  ov21_021D94BC.c  ov21_021DDD2C.c  ov21_021E1924.c  ov21_021E29DC.c  ov21_021E4CA4.c  ov21_021E68F4.c  ov21_021E8484.c  pokedex_search.c
src/overlay022/: ov22_02255D44.c
src/overlay023/: ov23_0223E140.c  ov23_0224340C.c  ov23_0224F294.c
src/overlay079/: ov79_021D183C.c
src/overlay084/: ov84_0223B5A0.c
src/overlay088/: ov88_0223B140.c
src/overlay091/: ov91_021D0D80.c
src/overlay099/: ov99_021D0D80.c  ov99_021D1A54.c  ov99_021D2C08.c  ov99_021D2E28.c  ov99_021D340C.c
src/overlay104/: ov104_0222FBE4.c  ov104_02231F74.c  ov104_0223DC7C.c
src/overlay107/: ov107_02241AE0.c  ov107_02245EB0.c
src/overlay115/: ov115_02260CEC.c
subprojects/: metang.wrap
tools/: meson.build
tools/datagen/: datagen.h  datagen_species.cpp  datagen_species_v2.cpp
tools/dataproc/: .gitignore  Makefile  README.md  meson.build  test-batch.sh
tools/devtools/: gen_compile_commands.py
tools/enumproc/: enumproc.c  (+3 more)
tools/resdat/: .gitignore  Cargo.toml  buildit.sh  meson.build
tools/resdat/src/: main.rs
(+38 files in other folders)
