[package]
name = "resdat"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = [ "derive" ] }
serde_json = { version = "1.0.149" }
clap = { version = "4.5.54", features = [ "derive" ] }
regex = "1.12.2"
json-spanned-value = "0.2.2"
codespan-reporting = "0.13.1"
